src/components/timeline-layer.less
@import (reference) './library';

.sv-timeline-layer {
  display: flex;
  flex-wrap: wrap;
  margin-top: @padding-small * -1;
  &:not(:last-child) .sv-timeline-layer-properties {
    margin-bottom: @padding-small;
  }
  &.sv-hidden .sv-timeline-layer-top .sv-control .sv-text-field {
    text-decoration: line-through;
    opacity: 0.5;
  }
  &.sv-selected:not(.sv-hidden) .sv-timeline-layer-top {
    .sv-control {
      color: white;
    }
    .sv-timeline-layer-top-bar {
      background-color: @gray-lightest;
      &[type="dummy"] {
        background-color: mix(@dummy-layer-color, @gray-lightest, 75%);
      }
      &[type="text"] {
        background-color: mix(@text-layer-color, @gray-lightest, 75%);
      }
      &[type="image"] {
        background-color: mix(@image-layer-color, @gray-lightest, 75%);
      }
    }
  }
  &.sv-sticky, &.sv-stuck {
    padding-top: @padding-base + @padding-small * 2;
    .sv-timeline-layer-top {
      width: 100%;
      background-color: @gray-darker;
      position: absolute;
      top: 0;
      left: 0;
      z-index: 1;
    }
  }
  &.sv-stuck {
    position: relative;
    .sv-timeline-layer-top {
      top: auto;
      bottom: 0;
    }
  }

  .sv-control {
    width: @library-width;
    padding: 0 @padding-small;
    line-height: @padding-base;
    color: @gray-lightest;
    .sv-text-field {
      box-shadow: 0 1px @gray-light;
      &:before {
        background-color: @brand-primary;
      }
    }
    .sv-control-actions .sv-control-action {
      &.sv-clickable {
        &:hover .sv-icon {
          fill: white;
        }

        .sv-icon {
          fill: @gray-lightest;
          &.sv-active {
            fill: @brand-primary;
          }
        }
      }

      .sv-icon {
        fill: @gray-light;
      }
    }
  }
  .sv-timeline-layer-track {
    flex-grow: 1;
    margin: 0 @padding-small;
    position: relative;
  }
  .sv-timeline-layer-top {
    display: flex;
    flex-grow: 1;
    padding: @padding-small 0;
    .sv-control {
      font-size: @font-size-small;
      .sv-text-field {
        overflow: hidden;
        white-space: nowrap;
        &:not([contenteditable="true"]) {
          text-overflow: ellipsis;
        }
      }
    }
    .sv-timeline-layer-top-link {
      &:not(.sv-enabled) .sv-icon {
        transform: rotate(-45deg);
      }
      &.sv-disabled {
        span {
          color: @gray;
        }
        .sv-icon {
          fill: @gray !important;
        }
      }

      span, .sv-icon {
        display: inline-block;
        vertical-align: top;
      }
      span {
        .sv-ellipsized;
        max-width: @padding-larger;
        margin-right: @padding-smallest;
        font-size: @font-size-smaller;
        color: @brand-primary;
      }
      .sv-icon {
        transition: transform @transition-duration-fast ease-in;
      }
    }
    .sv-timeline-layer-top-bar {
      height: @padding-base;
      border-radius: @border-radius-small;
      box-shadow: 0 1px 1px @shadow-dark;
      background-color: @gray-light;
      cursor: pointer;
      position: absolute;
      top: 0;
      left: 0;
      &[type="dummy"] {
        background-color: mix(@gray-light, @dummy-layer-color, 75%);
      }
      &[type="text"] {
        background-color: mix(@gray-light, @text-layer-color, 75%);
      }
      &[type="image"] {
        background-color: mix(@gray-light, @image-layer-color, 75%);
      }

      .sv-timeline-layer-bar-handle {
        width: 5px;
        height: 100%;
        cursor: ew-resize;
        position: absolute;
        top: 0;
        left: 0;
        transform: translateX(-50%);
        &:last-child {
          left: 100%;
        }
      }
    }
  }
  .sv-timeline-layer-properties {
    width: 100%;
    padding: @padding-small 0;
    background-color: @gray-dark;
    .sv-timeline-layer-property {
      display: flex;
      &:not(:last-child) {
        margin-bottom: @padding-smaller;
      }

      .sv-control {
        font-size: @font-size-smaller;
        span {
          color: @gray-light;
        }
      }
      .sv-timeline-layer-property-keyframe {
        width: @font-size-smaller / 1.5;
        height: @font-size-smaller / 1.5;
        box-shadow: @box-shadow-small;
        background-color: @gray-lightest;
        cursor: pointer;
        position: absolute;
        top: 50%;
        transform: translate(-50%, -50%) rotate(45deg);
      }
    }
  }
}

